fixed spacing for attribute and stiemap

--- a/attribute.css
+++ b/attribute.css
@@ -3,3 +3,7 @@
 a{
     color: white;
 }
+
+ul{
+    margin-bottom: 100px
+}
